--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,10 +1,1 @@
-{
-  "meta": {
-    "username": "hex-m",
-    "repositoryName": "hex-m.github.io",
-    "branch": "master"
-  },
-  "theme": {
-    "name": "Casper"
-  }
-}
+{"meta":{"username":"hex-m","repositoryName":"hex-m.github.io","branch":"master"},"site":{"title":"H.M.","description":"Mainly SysAdmin topics from my day job.","url":"https://hex-m.github.io"},"socialnetwork":{},"theme":{"name":"Casper","url":"//hex-m.github.io/themes/Casper"}}
