Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,1 +1,1 @@
-{"meta":{"username":"hex-m","repositoryName":"hex-m.github.io","branch":"master"},"site":{"title":"H.M.","description":"Mainly SysAdmin topics from my day job.","url":"https://hex-m.github.io"},"socialnetwork":{},"theme":{"name":"Casper","url":"//hex-m.github.io/themes/Casper"}}
+{"meta":{"username":"hex-m","repositoryName":"hex-m.github.io","branch":"master"},"site":{"title":"Dolor sit amet","description":"Mainly SysAdmin topics from my day job.","url":"https://hex-m.github.io"},"socialnetwork":{},"theme":{"name":"Casper","url":"//hex-m.github.io/themes/Casper"}}
